syntax = "proto3";

option java_package = "emu.lunarcore.proto";

message Gateserver {
	string LKDFCHNEFBB = 614;
	string LHGKDGDJIHC = 784;
	bool unk2 = 10;
	uint32 CLCFLOAMGBL = 1243;
	bool unk4 = 326;
	string msg = 8;
	string ifix_url = 370; // Ifix
	bool NNGLEBKCMLA = 2018;
	bool unk1 = 6;
	string BJOCANIBBKI = 1332;
	bool MCEIPIBAMDB = 1574;
	string AIPNJNLHFBP = 569;
	string IIJLFILFMDF = 138;
	bool FIOHEKDJNCG = 837;
	string msg2 = 659;
	bool APJECJMGAKC = 577;
	string NECFMBFGPML = 1035;
	string LLFDDPLHGBM = 1359;
	string NPPCGBIFDMN = 452;
	string ipv6 = 1952;
	string PMABNNEDCCG = 1012;
	string KLIAGHGOFML = 1245;
	bool NPHDIMJOKNI = 1866;
	string ODOCFCJMBCL = 337;
	string NPIGPBEKEKO = 464;
	string ip = 5;
	string region_name = 12;
	string KDBAGALHEDC = 1122;
	bool unk3 = 62;
	int64 MDAHNIKKAHI = 4;
	bool JGCIILJEHHE = 673;
	string FDGFFCMALPI = 1134;
	string ex_resource_url = 1; // Design Data
	string FHALNCIHMGA = 592;
	string GKPLIAPPLCO = 1893;
	uint32 retcode = 2;
	string IPKLAMMKNNG = 117;
	string OBOPKJFGDIC = 1556;
	uint32 HNDPOHGEIPM = 13;
	bool CNAKLGMDLPE = 422;
	string lua_url = 3; // Lua
	string MKCNEFHHAOG = 365;
	bool LAABLMNKLLD = 1703;
	bool unk5 = 340;
	string OGJIECMHHHG = 962;
	bool OFJAKNEDMDM = 1782;
	string asset_bundle_url = 9; // Asb
	string BBFOAJGLLBC = 355;
	string PNALJLBMILJ = 1307;
	repeated string GBONLDEMBEN = 1588;
	string EICAECNMDIB = 1334;
	string IOKEPIEDBNE = 14;
	bool EBKBNEKCOHI = 1575;
	string KKHFKMIKFIB = 362;
	string MDKDJLNHGKN = 1624;
	string ELJIMGJLHBC = 1779;
	int64 GHENHJPJJLK = 15;
	string FCMMMPKJJIL = 20;
	uint32 IGKDKFJIDPP = 7;
	uint32 port = 11;
}